Generate clojure_binary targets from ns metadata
Namespaces can now opt in to having a `clojure_binary` target
generated by gen_srcs by adding `:bazel/clojure_binary` metadata:

  (ns my.benchmark
    {:bazel/clojure_binary {:jvm_flags ["-Djdk.attach.allowAttachSelf"]}}
    (:gen-class))

This generates a colocated `clojure_binary` target rather than
requiring a manual `java_binary` in a top-level BUILD file. The
target name defaults to `{ns-label}.bin`.

JVM flags from `deps.edn :bazel :clojure_library :jvm_flags` are
prepended automatically — metadata only needs the extras. Scalars
like `:main_class` and `:args` use last-wins merge so they can be
overridden.

Refactors `ns-rules` to return pure data (`{:type :attrs}` maps)
instead of serialized Bazel strings. A new `emit-rule` function
handles serialization. This lets `gen-dir` inspect rule types
(e.g. to decide whether to include `clojure_binary` in the load
statement) without string matching or re-parsing source files.
Tests now assert on the data directly.

(written by Claude)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>